fix(item): add flex wrap to the default slot for label + buttons

--- a/core/src/components/item/item.scss
+++ b/core/src/components/item/item.scss
@@ -206,6 +206,9 @@
   display: flex;
   position: relative;
 
+  // Flex wrap is required here in order to wrap
+  // the start slot + .item-inner content that
+  // doesn't fit on the same line
   flex-wrap: wrap;
 
   align-items: inherit;
@@ -229,6 +232,11 @@
   z-index: 1;
 
   box-sizing: border-box;
+}
+
+// TODO(): remove
+:host(.item-legacy) .item-native {
+  flex-wrap: nowrap;
 }
 
 .item-native::-moz-focus-inner {
@@ -274,6 +282,10 @@ button, a {
   flex: 1 0 auto;
 
   flex-direction: inherit;
+
+  // Flex wrap is required here in order to wrap
+  // .input-wrapper content + the end slot that
+  // doesn't fit on the same line
   flex-wrap: wrap;
 
   align-items: inherit;
@@ -378,7 +390,13 @@ button, a {
   // the label from shrinking when there are wide
   // elements next to it
   flex: 1 0 auto;
+
   flex-direction: inherit;
+
+  // Flex wrap is required here in order to wrap
+  // content in the default slot (such as a label
+  // and a button) that doesn't fit on the same line
+  flex-wrap: wrap;
 
   align-items: inherit;
   align-self: stretch;
